# Project-Max

./: .gitignore  README.md  install.sh  patch_agent_harness_v02.sh  patch_agent_harness_v03_ux.sh  patch_agent_harness_v04_selftest.sh  patch_agent_harness_v05_max_ui.sh  patch_agent_harness_v06_sessions_ask.sh  patch_agent_harness_v07_speed_router.sh  patch_agent_harness_v08_editing.sh  patch_agent_harness_v09_chat_workflow.sh  patch_agent_harness_v10_workflow_polish.sh  patch_agent_harness_v11_project_manager.sh  patch_agent_harness_v12_files_progress.sh  patch_agent_harness_v13_skills_foundation.sh  patch_agent_harness_v14_spinner_skills_scope.sh  patch_agent_harness_v15_run_files_fix.sh  patch_agent_harness_v16_index_task_fix.sh  patch_agent_harness_v17_run_args_context_tests.sh  patch_agent_harness_v17_stable_restore.sh  patch_agent_harness_v18_config_permissions.sh  patch_agent_harness_v18_test_history.sh  patch_agent_harness_v18b_test_history.sh  patch_agent_harness_v18c_fix_test_import.sh  patch_agent_harness_v19_web_tools.sh  patch_agent_harness_v19b_web_download_fix.sh  patch_agent_harness_v20_browser_tools.sh  patch_agent_harness_v21_research_tools.sh  patch_agent_harness_v21b_research_regex_fix.sh  patch_agent_harness_v21c_research_search_fix.sh  patch_agent_harness_v22_notes_memory.sh  patch_agent_harness_v23_audit_timeline.sh  patch_agent_harness_v24_workspace_shell.sh  patch_agent_harness_v25_test_runner.sh  patch_agent_harness_v26_to_v29_power_loop.sh  pyproject.toml
scripts/: quick_test.sh
test-project/: AGENT.md  agent.config.json
(+55 files in other folders)
