[project]
name = "agent-harness"
version = "0.1.0"
description = "Local terminal-first agent harness using Ollama, structured memory, and safe command execution."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
agentctl = "agent_harness.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
